[gd_scene load_steps=9 format=2]

[ext_resource path="res://game/game.gd" type="Script" id=1]
[ext_resource path="res://game/die/Die.tscn" type="PackedScene" id=2]
[ext_resource path="res://game/font/Blazma-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://game/hud.gd" type="Script" id=4]
[ext_resource path="res://game/die/operators.png" type="Texture" id=5]
[ext_resource path="res://game/right.wav" type="AudioStream" id=6]
[ext_resource path="res://game/wrong.wav" type="AudioStream" id=7]

[sub_resource type="DynamicFont" id=1]
size = 76
font_data = ExtResource( 3 )

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -14.0
margin_top = -8.0
margin_right = 616.0
margin_bottom = 622.0
color = Color( 0, 0, 0, 1 )

[node name="HUD" type="CanvasLayer" parent="."]
script = ExtResource( 4 )

[node name="LblInput" type="Label" parent="HUD"]
margin_left = 212.0
margin_top = 372.0
margin_right = 344.0
margin_bottom = 459.0
custom_fonts/font = SubResource( 1 )
text = "000"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="LblTime" type="Label" parent="HUD"]
margin_left = 424.0
margin_top = 23.0
margin_right = 540.0
margin_bottom = 79.0
text = "4444"

[node name="LblScore" type="Label" parent="HUD"]
margin_left = 62.0
margin_top = 19.0
margin_right = 197.0
margin_bottom = 85.0

[node name="Dice" type="Node2D" parent="."]

[node name="Die1" parent="Dice" instance=ExtResource( 2 )]
position = Vector2( 106, 185 )

[node name="Die2" parent="Dice" instance=ExtResource( 2 )]
position = Vector2( 179, 186 )

[node name="Die3" parent="Dice" instance=ExtResource( 2 )]
position = Vector2( 410, 186 )

[node name="Die4" parent="Dice" instance=ExtResource( 2 )]
position = Vector2( 482, 187 )

[node name="Operator" type="Sprite" parent="."]
position = Vector2( 296, 187 )
texture = ExtResource( 5 )
hframes = 4
frame = 2

[node name="TmrMultiplier" type="Timer" parent="."]
one_shot = true

[node name="SoundCorrect" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )

[node name="SoundWrong" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
